--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "CloudinarySettings": {
+    "CloudName": "abohler",
+    "ApiKey": "363139623166711",
+    "ApiSecret": "IdTqlKkjIIARSVaDDRP0K9ZwAbY"
+  },
   "AllowedHosts": "*"
 }
